# ilpy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GurobiBackend.cpp  GurobiBackend.h  LICENSE  LinearConstraint.h  MANIFEST.in  Makefile  QuadraticConstraint.h  QuadraticSolverBackend.h  README.md  ScipBackend.cpp  _pyproject.toml  coverage.xml  coverage_cpp.xml  generate_lib.bat  pyproject.toml  setup.py  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish-docs.yaml  pypi.yaml
.github2/: ISSUE_TEMPLATE.md
.github2/workflows/: ci.yml
conda/: README.md  conda_build_config.yaml  meta.yaml
docs/: api.md  api.rst  conf.py  index.md  index.rst
ilpy/: __init__.py  _functional.py  decl.pxd  event_data.pyi  events.pyi  expressions.py  wrapper.pyi  wrapper.pyx
ilpy/impl/: config.h  gurobi_c.h
ilpy/impl/solvers/: Constraint.cpp  Constraint.h  Constraints.h  CplexBackend.cpp  GurobiBackend.cpp  GurobiBackend.h  GurobiEventHandler.h  LinearConstraints.cpp  LinearSolverBackendFactory.h  Objective.h  QuadraticConstraint.cpp  QuadraticObjective.cpp  QuadraticSolverBackend.h  QuadraticSolverBackendFactory.h  ScipBackend.cpp  ScipBackend.h  ScipEventHandler.h  SolverBackend.h  SolverFactory.cpp  SolverFactory.h
src/ilpy/: __init__.py  _components.py  _constants.py  _functional.py  _solver.py  decl.pxd  event_data.py  event_data.pyi  expressions.py  wrapper.cpp  wrapper.pyi  wrapper.pyx
src/ilpy/impl/: gurobi_c.h
src/ilpy/impl/solvers/: BackendPreference.h  Constraints.h  CplexBackend.cpp  CplexBackend.h  GurobiBackend.cpp  GurobiBackend.h  Objective.cpp  Objective.h  ScipBackend.cpp  ScipBackend.h  SolverBackend.h  SolverFactory.cpp  SolverFactory.h
src/ilpy/solver_backends/: __init__.py  _base.py  _gurobi.py  _scip.py
tests/: test_constraint.py  test_expressions.py  test_objective.py  test_solvers.py
